tests/compilefail21.out
[1mtests/compilefail21.pas:1:31: [0m[1m[91merror:[0m Invalid program parameter 'real'
     1 |