tests/compilefail21.pas
program compilefail21(output, fizzazle);
{test invalid program parameters}

begin
	writeln('hello world');
end.
